; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_label_associate_extattr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_label_associate_extattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }
%struct.vnode = type { i32 }

@vnode_label_associate_extattr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_vnode_label_associate_extattr(%struct.mount* %0, %struct.vnode* %1) #0 {
  %3 = alloca %struct.mount*, align 8
  %4 = alloca %struct.vnode*, align 8
  %5 = alloca i32, align 4
  store %struct.mount* %0, %struct.mount** %3, align 8
  store %struct.vnode* %1, %struct.vnode** %4, align 8
  %6 = load i32, i32* @vnode_label_associate_extattr, align 4
  %7 = load %struct.mount*, %struct.mount** %3, align 8
  %8 = load %struct.mount*, %struct.mount** %3, align 8
  %9 = getelementptr inbounds %struct.mount, %struct.mount* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.vnode*, %struct.vnode** %4, align 8
  %12 = load %struct.vnode*, %struct.vnode** %4, align 8
  %13 = getelementptr inbounds %struct.vnode, %struct.vnode* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @MAC_CHECK(i32 %6, %struct.mount* %7, i32 %10, %struct.vnode* %11, i32 %14)
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i32 @MAC_CHECK(i32, %struct.mount*, i32, %struct.vnode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
